--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,11 +1,12 @@
 buildscript {
     ext {
         buildToolsVersion = "34.0.0"
-        minSdkVersion = 23
+        minSdkVersion = 34
         compileSdkVersion = 34
         targetSdkVersion = 34
         ndkVersion = "26.1.10909125"
         kotlinVersion = "1.9.24"
+        ffmpegKitPackage = "full" // "video" or "full"
     }
     repositories {
         google()
