--- a/package.json
+++ b/package.json
@@ -10,8 +10,17 @@
     "test": "jest"
   },
   "dependencies": {
+    "ffmpeg-kit-react-native": "^6.0.2",
     "react": "18.3.1",
-    "react-native": "0.75.4"
+    "react-native": "0.75.4",
+    "react-native-color-picker": "^0.6.0",
+    "react-native-document-picker": "^9.3.1",
+    "react-native-ffmpeg": "^0.5.2",
+    "react-native-fs": "^2.20.0",
+    "react-native-gallery-manager": "^1.0.9",
+    "react-native-image-picker": "^7.1.2",
+    "react-native-permissions": "^4.1.5",
+    "react-native-video": "^6.6.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
