--- a/android/build.gradle
+++ b/android/build.gradle
@@ -5,18 +5,25 @@ buildscript {
         compileSdkVersion = 34
         targetSdkVersion = 34
         ndkVersion = "26.1.10909125"
-        kotlinVersion = "1.9.24"
-        ffmpegKitPackage = "full" // "video" or "full"
+        kotlinVersion = "1.7.20" // Update Kotlin version
+        ffmpegKitPackage = "full"
+    }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
     repositories {
         google()
         mavenCentral()
     }
     dependencies {
-        classpath("com.android.tools.build:gradle")
-        classpath("com.facebook.react:react-native-gradle-plugin")
-        classpath("org.jetbrains.kotlin:kotlin-gradle-plugin")
+        implementation 'androidx.core:core-ktx:1.10.0' // Common KTX library
+        implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1' // Lifecycle components
+        implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.1' // ViewModel components
+        implementation 'androidx.appcompat:appcompat:1.6.1'
+        implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+        classpath("com.android.tools.build:gradle:8.0.2") 
+        classpath("com.facebook.react:react-native-gradle-plugin:0.75.4") 
+        classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion")
     }
 }
-
-apply plugin: "com.facebook.react.rootproject"
